--- a/configs/roles/apache/templates/000-default.conf.j2
+++ b/configs/roles/apache/templates/000-default.conf.j2
@@ -9,7 +9,7 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/wordpress
+	DocumentRoot "{{ wp_install_dir }}"
 
 	# Available loglevels: trace8, ..., lolo, trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
